--- a/91. Decode Ways.ipynb
+++ b/91. Decode Ways.ipynb
@@ -8,8 +8,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming (Bottom-Up)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(n)$**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numDecodings(self, s: str) -> int:\n",
+    "        # 初始化 DP 字典，dp[i] 代表從索引 i 開始到字串結尾的解碼方法總數\n",
+    "        dp = {len(s): 1} # space: O(n)\n",
+    "        print(f\"{dp = }\")\n",
+    "\n",
+    "        # 從字串的末尾開始往前計算（自底向上）\n",
+    "        for i in range(len(s) - 1, -1, -1): # time: O(n)\n",
+    "            print(\"-\" * 50)\n",
+    "            print(f\"{i = }, {s[i] = }\")\n",
+    "            # 如果當前字元是 \"0\"，代表任何以這個位置開頭的解碼組合都不合法\n",
+    "            if s[i] == \"0\":\n",
+    "                dp[i] = 0\n",
+    "                print(f\"dp[{i}] = {dp[i]}\")\n",
+    "            else:\n",
+    "                # 預設情況：取一個數字解碼。此時解法數等於後一個位置 dp[i + 1] 的結果\n",
+    "                dp[i] = dp[i + 1]\n",
+    "                print(f\"dp[{i}] = dp[{i + 1}] = {dp[i]}\")\n",
+    "\n",
+    "            # 檢查是否可以取連續兩個數字解碼（需符合 10-26 之間）\n",
+    "            if i + 1 < len(s) and (\n",
+    "                s[i] == \"1\" or # 十位數為 1，則個位數 0-9 皆可\n",
+    "                (s[i] == \"2\" and s[i + 1] <= \"6\") # 十位數為 2，則個位數需在 0-6 之間\n",
+    "            ):\n",
+    "                # 如果兩位數組合合法，則將跳過兩個位置後的結果 dp[i + 2] 累加進來\n",
+    "                dp[i] += dp[i + 2]\n",
+    "                print(f\"-> dp[{i}] = dp[{i}] + dp[{i + 2}] = dp[{i}] + {dp[i + 2]} = {dp[i]}\")\n",
+    "        \n",
+    "        # 最終回傳從索引 0 開始（即整個字串）的解碼總數\n",
+    "        return dp[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dp = {6: 1}\n",
+      "--------------------------------------------------\n",
+      "i = 5, s[i] = '6'\n",
+      "dp[5] = dp[6] = 1\n",
+      "--------------------------------------------------\n",
+      "i = 4, s[i] = '1'\n",
+      "dp[4] = dp[5] = 1\n",
+      "-> dp[4] = dp[4] + dp[6] = dp[4] + 1 = 2\n",
+      "--------------------------------------------------\n",
+      "i = 3, s[i] = '0'\n",
+      "dp[3] = 0\n",
+      "--------------------------------------------------\n",
+      "i = 2, s[i] = '2'\n",
+      "dp[2] = dp[3] = 0\n",
+      "-> dp[2] = dp[2] + dp[4] = dp[2] + 2 = 2\n",
+      "--------------------------------------------------\n",
+      "i = 1, s[i] = '3'\n",
+      "dp[1] = dp[2] = 2\n",
+      "--------------------------------------------------\n",
+      "i = 0, s[i] = '2'\n",
+      "dp[0] = dp[1] = 2\n",
+      "-> dp[0] = dp[0] + dp[2] = dp[0] + 2 = 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"232016\"\n",
+    "Solution().numDecodings(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming (Top-Down)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(n)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numDecodings(self, s: str) -> int:\n",
+    "        # 使用字典 dp 來儲存已計算過的結果，避免重複運算\n",
+    "        # 初始化：當索引達到字串長度（len(s)）時，代表成功解碼出一種組合\n",
+    "        dp = {len(s): 1}\n",
+    "\n",
+    "        # 定義深度優先搜尋函數，num 代表當前處理到的字串索引\n",
+    "        # time: O(n)，每個索引位置只會被完整計算 1 次\n",
+    "        # space: O(n)，Recursion Stack 最多可達 n 層\n",
+    "        def dfs(num):\n",
+    "            # 如果這個索引位置已經計算過，直接回傳結果（加速）\n",
+    "            if num in dp:\n",
+    "                return dp[num]\n",
+    "\n",
+    "            # 如果當前數字是 \"0\"，因為沒有任何字母對應 0，此路徑無效\n",
+    "            if s[num] == \"0\":\n",
+    "                return 0\n",
+    "\n",
+    "            # 情況一：將當前的一個數字解碼（例如 '1' -> 'A'）\n",
+    "            result = dfs(num + 1)\n",
+    "            \n",
+    "            # 情況二：嘗試將當前與下一個數字組成兩位數解碼（範圍須在 10-26 之間）\n",
+    "            if num + 1 < len(s):\n",
+    "                # 判斷是否為 \"10\"-\"19\" 或 \"20\"-\"26\"\n",
+    "                if (s[num] == \"1\") or (s[num] == \"2\" and s[num + 1] <= \"6\"):\n",
+    "                    # 如果符合條件，則累加跳過兩個數字後的解法數\n",
+    "                    result += dfs(num + 2)\n",
+    "\n",
+    "            # 將目前的計算結果存入 dp 字典中，供之後的路徑直接調用\n",
+    "            dp[num] = result\n",
+    "            \n",
+    "            return result \n",
+    "\n",
+    "        # 從索引 0 開始進行遞迴\n",
+    "        return dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"232016\"\n",
+    "Solution().numDecodings(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(2^n)$**  \n",
+    "**空間複雜度: $O(n)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numDecodings(self, s: str) -> int:\n",
+    "        # 定義深度優先搜尋函數，num 代表當前處理到的字串索引\n",
+    "        # time: O(2^n)，每一層遞迴中，最多會分支出兩個遞迴呼叫（dfs(num+1) 與 dfs(num+2)）\n",
+    "        # space: O(n)，Recursion Stack 最多可達 n 層\n",
+    "        def dfs(num):\n",
+    "            # 遞迴終止條件：如果索引達到字串末尾，代表成功找到一種解碼方式\n",
+    "            if num == len(s):\n",
+    "                return 1\n",
+    "\n",
+    "            # 如果當前數字是 \"0\"，因為沒有任何字母對應 0，此路徑無效\n",
+    "            if s[num] == \"0\":\n",
+    "                return 0\n",
+    "\n",
+    "            # 情況一：將當前的一個數字解碼（例如 '1' -> 'A'）\n",
+    "            result = dfs(num + 1)\n",
+    "            \n",
+    "            # 情況二：嘗試將當前與下一個數字組成兩位數解碼（範圍須在 10-26 之間）\n",
+    "            if num + 1 < len(s):\n",
+    "                # 判斷是否為 \"10\"-\"19\" 或 \"20\"-\"26\"\n",
+    "                if (s[num] == \"1\") or (s[num] == \"2\" and s[num + 1] <= \"6\"):\n",
+    "                    # 如果符合條件，則累加跳過兩個數字後的解法數\n",
+    "                    result += dfs(num + 2)\n",
+    "            \n",
+    "            return result \n",
+    "\n",
+    "        # 從索引 0 開始進行遞迴\n",
+    "        return dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"232016\"\n",
+    "Solution().numDecodings(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +353,7 @@
        "8"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -120,14 +380,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6a07fcf0145f94b3f971c13d061528107de20ab7b779375f96dab9bbac6a85db"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
