--- a/91. Decode Ways.ipynb
+++ b/91. Decode Ways.ipynb
@@ -11,6 +11,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Dynamic Programming (Bottom-Up) (Space Optimized)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(1)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numDecodings(self, s: str) -> int:\n",
+    "        # dp1 代表 dp[i+1]（後一步的結果），初始化為 1 (對應空字串)\n",
+    "        # dp2 代表 dp[i+2]（後兩步的結果）\n",
+    "        dp = dp2 = 0\n",
+    "        dp1 = 1\n",
+    "        \n",
+    "        # 從字串末尾向前遍歷\n",
+    "        for i in range(len(s) - 1, -1, -1): # time: O(n)\n",
+    "            # 如果當前字元是 \"0\"，代表任何以這個位置開頭的解碼組合都不合法\n",
+    "            if s[i] == \"0\":\n",
+    "                dp = 0\n",
+    "            else:\n",
+    "                # 取一個數字解碼。此時解法數等於後一個位置 dp[i + 1] 的結果\n",
+    "                dp = dp1\n",
+    "\n",
+    "            # 檢查是否可以取連續兩個數字解碼（需符合 10-26 之間）\n",
+    "            if (\n",
+    "                i + 1 < len(s) and\n",
+    "                (\n",
+    "                    s[i] == \"1\" or # 十位數為 1，則個位數 0-9 皆可\n",
+    "                    (s[i] == \"2\" and s[i + 1] in \"0123456\") # 十位數為 2，則個位數需在 0-6 之間\n",
+    "                )\n",
+    "            ):\n",
+    "                # 如果兩位數組合合法，則將跳過兩個位置後的結果 dp[i + 2] 累加進來\n",
+    "                dp += dp2\n",
+    "\n",
+    "            # 滾動更新變數\n",
+    "            dp, dp1, dp2 = 0, dp, dp1\n",
+    "\n",
+    "        # 最後 dp1 會儲存索引 0 的計算結果\n",
+    "        return dp1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"232016\"\n",
+    "Solution().numDecodings(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dynamic Programming (Bottom-Up)"
    ]
   },
@@ -24,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +175,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +254,7 @@
        "4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +326,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +429,7 @@
        "8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
