--- a/152. Maximum Product Subarray.ipynb
+++ b/152. Maximum Product Subarray.ipynb
@@ -39,6 +39,70 @@
    "source": [
     "class Solution:\n",
     "    def maxProduct(self, nums: List[int]) -> int:\n",
+    "        # n: 陣列長度, res: 最終結果（初始化為第一個元素以應對長度為 1 的情況）\n",
+    "        n, res = len(nums), nums[0]\n",
+    "        \n",
+    "        # prefix: 從左往右的累積乘積\n",
+    "        # suffix: 從右往左的累積乘積\n",
+    "        # 初始化為 0 是為了配合下方的 (prefix or 1) 邏輯\n",
+    "        prefix = suffix = 0\n",
+    "\n",
+    "        # 只需一次遍歷，同時計算前綴與後綴\n",
+    "        for i in range(n):\n",
+    "            # --- 關鍵邏輯 1：處理 0 的重置 ---\n",
+    "            # 如果 prefix 為 0（剛開始或遇到 0），(prefix or 1) 會將其當作 1\n",
+    "            # 這樣 prefix 就會變成 nums[i] 本身，達到「遇到 0 就切斷並重新開始」的效果\n",
+    "            prefix = nums[i] * (prefix or 1)\n",
+    "            \n",
+    "            # 對稱地從陣列尾端計算後綴乘積\n",
+    "            suffix = nums[n - 1 - i] * (suffix or 1)\n",
+    "            \n",
+    "            # --- 關鍵邏輯 2：雙向涵蓋所有可能 ---\n",
+    "            # 1. 若負數為偶數：prefix 或 suffix 掃到最後都會得到全乘積。\n",
+    "            # 2. 若負數為奇數：最大值必定是「去掉最左邊負數後的右半段」或「去掉最右邊負數後的左半段」。\n",
+    "            #    這兩段分別會被 suffix 和 prefix 的某個步數捕捉到。\n",
+    "            res = max(res, max(prefix, suffix))\n",
+    "            \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [2,3,-2,4]\n",
+    "Solution().maxProduct(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度：O(n)  \n",
+    "* 空間複雜度：O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProduct(self, nums: List[int]) -> int:\n",
     "        # 初始化三個變數，分別用來存儲當前最大值、最小值和結果\n",
     "        # space: O(1)\n",
     "        dp_max = nums[0]\n",
@@ -68,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +157,7 @@
        "6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +234,7 @@
        "6"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +315,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
