--- a/152. Maximum Product Subarray.ipynb
+++ b/152. Maximum Product Subarray.ipynb
@@ -27,6 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Prefix & Suffix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 時間複雜度：O(n)  \n",
     "* 空間複雜度：O(1)"
    ]
@@ -85,6 +92,13 @@
    "source": [
     "nums = [2,3,-2,4]\n",
     "Solution().maxProduct(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dynamic Programming"
    ]
   },
   {
@@ -165,6 +179,13 @@
    "source": [
     "nums = [2,3,-2,4]\n",
     "Solution().maxProduct(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dynamic Programming"
    ]
   },
   {
