--- a/139. Word Break.ipynb
+++ b/139. Word Break.ipynb
@@ -8,49 +8,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dynamic Programming (Trie)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度：$O(n \\cdot L + m)$\n",
+    "* 空間複雜度：$O(2n + m)$ -> $O(n + m)$\n",
+    "\n",
+    "1. $n$ 為 字串(s) 總長度。\n",
+    "2. $L$ 為 max_word_length（字典中最長單字的長度）。\n",
+    "3. $m$ 是 word_set 儲存字典單字所佔用的空間。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
+    "# 定義 Trie (字典樹) 的節點結構\n",
+    "class TrieNode:\n",
+    "    def __init__(self):\n",
+    "        # 儲存子節點，Key 為字元，Value 為 TrieNode\n",
+    "        self.children = {}\n",
+    "        # 標記是否為單字的結尾\n",
+    "        self.is_end = False\n",
+    "\n",
     "class Solution:\n",
-    "    def wordBreak(self, s, wordDict):\n",
-    "        self.wordDict = wordDict\n",
-    "        return self.dfs(current = s, memory = {})\n",
-    "    \n",
-    "    def dfs(self, current, memory):\n",
-    "        print(\"-\" * 150)\n",
+    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:\n",
+    "        # --- 步驟 1：建立 Trie  (time: O(m), space: O(m)) ---\n",
+    "        root = TrieNode() # space: O(m)，儲存字典單字所佔用的空間\n",
+    "        for word in wordDict: # time: O(m)，字典中所有單字字元的總長度\n",
+    "            node = root\n",
+    "            for char in word: # time: O(L)，字典中最長單字的長度，但已經包含在 m 裡了\n",
+    "                if char not in node.children:\n",
+    "                    node.children[char] = TrieNode()\n",
+    "                node = node.children[char]\n",
+    "            node.is_end = True\n",
     "\n",
-    "        # 如果當前字符串為空，表示已經成功拆分\n",
-    "        if (current == \"\"):\n",
-    "            print(f'True -> (current == \"\")')\n",
-    "            return True\n",
-    "        \n",
-    "        # 如果當前字符串已經被記憶，直接返回記憶中的結果\n",
-    "        if (current in memory):\n",
-    "            print(f\"{memory[current]} -> ((current = {current}) in (memory = {memory}))\")\n",
-    "            return memory[current]\n",
-    "        \n",
-    "        # 嘗試使用字典中的單詞進行拆分\n",
-    "        for word in self.wordDict:\n",
-    "            print(f\"word = {word}, current = {current}\")\n",
-    "            if current.startswith(word):\n",
-    "                print(f\"(current = {current}) start with (word = {word})\")\n",
-    "                new_current = current[len(word):]\n",
-    "                print(f\"new_current = {new_current}\")\n",
+    "        n = len(s)\n",
+    "        memory = {} # 建立記憶化快取 # space: O(n)，字串總長度\n",
     "\n",
-    "                # 遞歸呼叫，檢查剩餘的部分是否能夠被成功拆分\n",
-    "                if self.dfs(current = new_current, memory = memory):\n",
-    "                    memory[current] = True\n",
-    "                    print(f\"True -> memory = {memory}\")\n",
+    "        # --- 步驟 2：DFS 搜尋  (time: O(n x L), space: O(n)) ---\n",
+    "        # time: O(n)，最大會遍歷字串 s 的每個字，\n",
+    "        # space: O(n)，遞迴最大深度會是字串 s 的長度\n",
+    "        def dfs(start):\n",
+    "            # 終止條件：起始索引到達末端，代表成功拆分\n",
+    "            if start == n:\n",
+    "                return True\n",
+    "            \n",
+    "            # 檢查記憶化快取：避免重複計算相同的 start (總共 n 個狀態)\n",
+    "            if start in memory:\n",
+    "                return memory[start]\n",
+    "            \n",
+    "            # 搜尋起點：重置指標到 Trie 根節點\n",
+    "            node = root \n",
+    "\n",
+    "            # 從 start 開始嘗試向後比對 # time: O(L)，最多比對典中最長單字長度 L 個字元，因為不在字典會自動跳出迴圈\n",
+    "            for i in range(start, n):\n",
+    "                char = s[i]\n",
+    "\n",
+    "                # 若 Trie 中無此字元，代表這條路徑無法組成字典單字，直接中斷 (剪枝)\n",
+    "                if char not in node.children:\n",
+    "                    break\n",
+    "                \n",
+    "                # 指標向下移動 (time: O(1)，取代了切片與雜湊計算)\n",
+    "                node = node.children[char]\n",
+    "\n",
+    "                # 若匹配到字典單字，且後續路徑也能成功拆分\n",
+    "                if node.is_end and dfs(i + 1):\n",
+    "                    memory[start] = True\n",
     "                    return True\n",
-    "        \n",
-    "        # 若無法成功拆分，將結果記錄為False\n",
-    "        memory[current] = False\n",
-    "        print(f\"False -> memory = {memory}\")\n",
-    "        print(\"_\" * 150)\n",
-    "        \n",
-    "        return False"
+    "\n",
+    "            # 嘗試過所有可能的 end 點皆失敗\n",
+    "            memory[start] = False\n",
+    "            return False\n",
+    "\n",
+    "        # 從索引 0 開始執行深度優先搜尋\n",
+    "        return dfs(0)"
    ]
   },
   {
@@ -58,30 +101,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "word = apple, current = applepenapple\n",
-      "(current = applepenapple) start with (word = apple)\n",
-      "new_current = penapple\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "word = apple, current = penapple\n",
-      "word = pen, current = penapple\n",
-      "(current = penapple) start with (word = pen)\n",
-      "new_current = apple\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "word = apple, current = apple\n",
-      "(current = apple) start with (word = apple)\n",
-      "new_current = \n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "True -> (current == \"\")\n",
-      "True -> memory = {'apple': True}\n",
-      "True -> memory = {'apple': True, 'penapple': True}\n",
-      "True -> memory = {'apple': True, 'penapple': True, 'applepenapple': True}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -97,11 +116,184 @@
     "s = \"applepenapple\"; wordDict = [\"apple\",\"pen\"]\n",
     "Solution().wordBreak(s, wordDict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dynamic Programming (Top-Down)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度：$O(n \\cdot L^2 + m)$\n",
+    "* 空間複雜度：$O(2n + m)$ -> $O(n + m)$\n",
+    "\n",
+    "1. $n$ 為 字串(s) 總長度。\n",
+    "2. $L$ 為 max_word_length（字典中最長單字的長度）。\n",
+    "3. $m$ 是 word_set 儲存字典單字所佔用的空間。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:\n",
+    "        # 將 wordDict 轉換為集合 (Set)，加速\n",
+    "        word_set = set(wordDict) # space: O(m)\n",
+    "        \n",
+    "        # 取得字典中最長單字的長度，用來限制後續 DFS 的搜尋範圍（剪枝優化）\n",
+    "        max_word_length = max([len(word) for word in word_set]) if len(word_set) else 0  # time: O(m)\n",
+    "        \n",
+    "        # 建立記憶化字典，紀錄每個 start 索引點的搜尋結果，避免重複計算\n",
+    "        memory = {} # 建立記憶化快取 # space: O(n)，字串總長度        \n",
+    "\n",
+    "        # time: O(n)，會遍歷字串 s 的每個字\n",
+    "        # space: O(n)，遞迴最大深度會是字串 s 的長度\n",
+    "        def dfs(start):\n",
+    "            # 終止條件：如果起始索引已到達字串末端，表示前面的拆分全部成功\n",
+    "            if start == len(s):\n",
+    "                return True\n",
+    "\n",
+    "            # 檢查記憶化快取：如果這個位置已經算過，直接回傳 True 或 False\n",
+    "            if start in memory:\n",
+    "                return memory[start]\n",
+    "\n",
+    "            # 優化：計算 end 的上限，不需檢查超過字典最長單字的長度\n",
+    "            tmp_length = min(start + max_word_length + 1, len(s) + 1)\n",
+    "            \n",
+    "            # 從當前 start 位置開始嘗試各種可能的結束點 end # time: O(L)，範圍不超過字典中最長單字的長度\n",
+    "            for end in range(start + 1, tmp_length):\n",
+    "                # 擷取目前的子字串\n",
+    "                temp_word = s[start:end] # time: O(L) -> 切片長度最長可能達到O(L)\n",
+    "\n",
+    "                # 如果子字串存在於字典中，且剩餘的字串 (從 end 開始) 也能成功拆分\n",
+    "                if (temp_word in word_set) and dfs(end):\n",
+    "                    # 紀錄目前 start 點為可行，並向上回傳成功\n",
+    "                    memory[start] = True\n",
+    "                    return True\n",
+    "\n",
+    "            # 如果嘗試了所有可能的 end 都無法成功，則紀錄此 start 為失敗\n",
+    "            memory[start] = False\n",
+    "            return False\n",
+    "\n",
+    "        # 從字串索引 0 的位置開始進行深度優先搜尋\n",
+    "        return dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"applepenapple\"; wordDict = [\"apple\",\"pen\"]\n",
+    "Solution().wordBreak(s, wordDict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dynamic Programming (Bottom-Up)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度：$O(n \\cdot L^2 + m)$\n",
+    "* 空間複雜度：$O(m + n)$\n",
+    "  \n",
+    "1. n 為 字串(s) 總長度\n",
+    "2. . $L$ 為 max_word_length（字典中最長單字的長度）。\n",
+    "3. $m$ 是 word_set 儲存字典單字所佔用的空間。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:\n",
+    "        # 將 wordDict 轉換為集合 (Set)，加速\n",
+    "        word_set = set(wordDict) # space: o(m)，m 是字典中所有單字的總長度\n",
+    "\n",
+    "        # 取得字典中最長單字的長度\n",
+    "        max_word_length = max([len(word) for word in word_set]) if len(word_set) else 0  # time: O(m)\n",
+    "\n",
+    "        n = len(s)\n",
+    "        \n",
+    "        # dp[i] 表示 s 的前 i 個字元是否可以被拆分成字典中的單字\n",
+    "        dp = [False] * (n + 1) # space: O(n)\n",
+    "        \n",
+    "        # 初始狀態：空字串可以被拆分\n",
+    "        dp[0] = True\n",
+    "        \n",
+    "        # 遍歷字串的每一個結尾位置 i\n",
+    "        for i in range(1, n + 1): # time: o(n)\n",
+    "            # 檢查從 j 到 i 的子字串\n",
+    "            # 不需要從 0 開始，只需要檢查 i 之前的 max_len 範圍即可，超過 max_len 的子字串絕對不可能在字典裡\n",
+    "            tmp_start = max(0, i - max_word_length)\n",
+    "            for j in range(tmp_start, i): # time: o(L)\n",
+    "                # 如果 s[0:j] 可以拆分，且 s[j:i] 在字典中\n",
+    "                # time: O(L) -> 切片長度最長可能達到O(L)\n",
+    "                if dp[j] and s[j:i] in word_set:\n",
+    "                    dp[i] = True\n",
+    "                    # 只要找到一種可能的拆分方式，就可以停止檢查目前的 i\n",
+    "                    break\n",
+    "                    \n",
+    "        # 回傳整個字串是否可以拆分\n",
+    "        return dp[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"applepenapple\"; wordDict = [\"apple\",\"pen\"]\n",
+    "Solution().wordBreak(s, wordDict)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -115,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
