--- a/1143. Longest Common Subsequence.ipynb
+++ b/1143. Longest Common Subsequence.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "每次只需要用到當前行和上一行的數據，所以可以只使用兩行來儲存數據，將空間複雜度從 O(m×n) 優化到 O(min(m,n))"
+    "每次只需要用到當前行和上一行的數據，所以可以只使用一行和一個變數來儲存數據，更優化空間複雜度"
    ]
   },
   {
@@ -25,6 +25,84 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestCommonSubsequence(self, text1: str, text2: str) -> int:\n",
+    "        # 優化：確保 text2 始終是較短的字串，這樣 dp 陣列長度最小，節省空間\n",
+    "        if len(text1) < len(text2):\n",
+    "            text1, text2 = text2, text1\n",
+    "\n",
+    "        m = len(text1)\n",
+    "        n = len(text2)\n",
+    "\n",
+    "        # 建立一維 DP 陣列，長度為較短字串長度 + 1\n",
+    "        dp = [0] * (n + 1)\n",
+    "\n",
+    "        # 外層迴圈遍歷 text1 的字元 (row)\n",
+    "        for row in range(1, m + 1):\n",
+    "            # top_left_corner 代表二維表格中的 dp[row-1][col-1] (對角線左上方)\n",
+    "            top_left_corner = 0 \n",
+    "            \n",
+    "            # 內層迴圈遍歷 text2 的字元 (col)\n",
+    "            for col in range(1, n + 1):\n",
+    "                # 在更新 dp[col] 之前，它目前存的是「正上方」的值 (即上一列的同一個位置)\n",
+    "                # 我們將其暫存起來，因為對下一個 col 來說，這個值就是它的「左上方」\n",
+    "                temp = dp[col]\n",
+    "\n",
+    "                # 如果兩個字元匹配\n",
+    "                if text1[row - 1] == text2[col - 1]:\n",
+    "                    # 新的 LCS 長度 = 左上方值 + 1\n",
+    "                    dp[col] = top_left_corner + 1\n",
+    "                else:\n",
+    "                    # 如果不匹配，取「上方」(目前的 dp[col]) 或「左方」(剛更新完的 dp[col-1]) 的最大值\n",
+    "                    dp[col] = max(dp[col], dp[col - 1])\n",
+    "                \n",
+    "                # 更新 top_left_corner，讓下一個 col 迴圈可以使用目前的 temp 作為左上方值\n",
+    "                top_left_corner = temp\n",
+    "\n",
+    "        # 回傳一維陣列的最後一個元素\n",
+    "        return dp[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "text1 = \"abcde\"\n",
+    "text2 = \"ace\"\n",
+    "print(Solution().longestCommonSubsequence(text1, text2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "每次只需要用到當前行和上一行的數據，所以可以只使用兩行來儲存數據，將空間複雜度從 O(m×n) 優化到 O(min(m,n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(m \\times n)$**  \n",
+    "**空間複雜度: $O(min(m,n) \\times 2)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -414,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
