--- a/54. Spiral Matrix.ipynb
+++ b/54. Spiral Matrix.ipynb
@@ -8,42 +8,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 時間複雜度：$O(M \\times N)$  \n",
+    "  每個格子都被遍歷一次。\n",
+    "- 空間複雜度：$O(1)$  \n",
+    "  除了存放結果的空間外，只用了常數個變數（不計入輸出空間的話）。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def spiralOrder(self, matrix: List[List[int]]) -> List[int]:\n",
+    "        # 若矩陣為空，直接回傳空列表\n",
+    "        if not matrix:\n",
+    "            return []\n",
+    "\n",
+    "        result = []\n",
+    "\n",
+    "        # 初始化四個邊界指標\n",
+    "        top = 0                          # 上邊界\n",
+    "        bottom = len(matrix) - 1         # 下邊界\n",
+    "        left = 0                         # 左邊界\n",
+    "        right = len(matrix[0]) - 1      # 右邊界\n",
+    "\n",
+    "        # 當邊界尚未交錯時，持續進行螺旋遍歷\n",
+    "        while top <= bottom and left <= right:\n",
+    "            \n",
+    "            # 1. 由左至右遍歷目前的頂部行\n",
+    "            for col in range(left, right + 1):\n",
+    "                result.append(matrix[top][col])\n",
+    "            top += 1 # 走完後頂部邊界下移\n",
+    "            \n",
+    "            # 2. 由上至下遍歷目前的右側列\n",
+    "            for row in range(top, bottom + 1):\n",
+    "                result.append(matrix[row][right])\n",
+    "            right -= 1 # 走完後右側邊界左移\n",
+    "\n",
+    "            # 3. 向左走之前，必須再次檢查「上下邊界」是否交錯（處理單行矩陣情況）\n",
+    "            if top <= bottom:\n",
+    "                # 由右至左遍歷目前的底部行\n",
+    "                for col in range(right, left -1, -1):\n",
+    "                    result.append(matrix[bottom][col])\n",
+    "                bottom -= 1 # 走完後底部邊界上移\n",
+    "\n",
+    "            # 4. 向上走之前，必須再次檢查「左右邊界」是否交錯（處理單列矩陣情況）\n",
+    "            if left <= right:\n",
+    "                # 由下至上遍歷目前的左側列\n",
+    "                for row in range(bottom, top - 1, -1):\n",
+    "                    result.append(matrix[row][left])\n",
+    "                left += 1 # 走完後左側邊界右移\n",
+    "\n",
+    "        return result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init: [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
-      "remove: [[4, 5, 6], [7, 8, 9]]\n",
-      "transpose: [[6, 9], [5, 8], [4, 7]]\n",
-      "result: [1, 2, 3]\n",
-      "\n",
-      "init: [[6, 9], [5, 8], [4, 7]]\n",
-      "remove: [[5, 8], [4, 7]]\n",
-      "transpose: [[8, 7], [5, 4]]\n",
-      "result: [1, 2, 3, 6, 9]\n",
-      "\n",
-      "init: [[8, 7], [5, 4]]\n",
-      "remove: [[5, 4]]\n",
-      "transpose: [[4], [5]]\n",
-      "result: [1, 2, 3, 6, 9, 8, 7]\n",
-      "\n",
-      "init: [[4], [5]]\n",
-      "remove: [[5]]\n",
-      "transpose: [[5]]\n",
-      "result: [1, 2, 3, 6, 9, 8, 7, 4]\n",
-      "\n",
-      "init: [[5]]\n",
-      "remove: []\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 6, 9, 8, 7, 4, 5]"
+       "[1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7]"
       ]
      },
      "execution_count": 2,
@@ -52,57 +86,15 @@
     }
    ],
    "source": [
-    "class Solution:\n",
-    "    def spiralOrder(self, matrix):\n",
-    "        result = []\n",
-    "        while True:\n",
-    "            print(\"init:\", matrix)\n",
-    "            result.extend(matrix.pop(0))\n",
-    "            print(\"remove:\", matrix)\n",
+    "matrix = [[1,2,3,4],[5,6,7,8],[9,10,11,12]]\n",
     "\n",
-    "            if not matrix:\n",
-    "                return result\n",
-    "\n",
-    "            # 轉置後翻轉(順序相反)\n",
-    "            dim1 = len(matrix[0])\n",
-    "            dim2 = len(matrix)\n",
-    "\n",
-    "            l1 = []\n",
-    "            for i in range(dim1-1, -1, -1):\n",
-    "                l2 = []\n",
-    "                for j in range(dim2):\n",
-    "                    l2.append(matrix[j][i])\n",
-    "                l1.append(l2)\n",
-    "            matrix = l1\n",
-    "            print(\"transpose:\", matrix)\n",
-    "            print(\"result:\", result)\n",
-    "            print()\n",
-    "\n",
-    "\n",
-    "matrix = [[1,2,3],[4,5,6],[7,8,9]]\n",
     "Solution().spiralOrder(matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def spiralOrder(self, matrix: List[List[int]]) -> List[int]:\n",
-    "        result = []\n",
-    "        while matrix:\n",
-    "            result.extend(matrix.pop(0)) \n",
-    "            matrix = list(zip(*matrix))[::-1] # 轉置後翻轉(順序相反)\n",
-    "        \n",
-    "        return result"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.7 ('.venv': venv)",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -116,14 +108,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.12.8"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6a07fcf0145f94b3f971c13d061528107de20ab7b779375f96dab9bbac6a85db"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
