--- a/48. Rotate Image.ipynb
+++ b/48. Rotate Image.ipynb
@@ -122,6 +122,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6f9fc5f",
+   "metadata": {},
+   "source": [
+    "# 📐 矩陣座標旋轉萬用手冊 (Matrix Rotation Formulas)\n",
+    "\n",
+    "在處理 $n \\times n$ 的矩陣旋轉時，核心邏輯在於 **Row ($r$)** 與 **Column ($c$)** 的位置互換以及 **反轉 ($n - 1 - ?$)** 的組合。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📊 旋轉公式對照表\n",
+    "\n",
+    "假設原始座標為 $(r, c)$，變換後的座標為 $(r', c')$：\n",
+    "\n",
+    "| 旋轉動作 | 萬用公式 $(r', c')$ | Row / Col 互換邏輯說明 |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **順時針 90°** | $(c, n - 1 - r)$ | **Col 變 Row**；**Row 變 Col 並反轉** ($n-1-r$) |\n",
+    "| **逆時針 90°** | $(n - 1 - c, r)$ | **Col 變 Row 並反轉** ($n-1-c$)；**Row 變 Col** |\n",
+    "| **旋轉 180°** | $(n - 1 - r, n - 1 - c)$ | **行列不換位**，但 Row 與 Col 皆各自反轉 |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔍 詳細範例說明：以 $5 \\times 5$ 矩陣中的 $(0, 1)$ 為例\n",
+    "\n",
+    "當 $n = 5$ 且原始座標 $(r, c) = (0, 1)$：\n",
+    "\n",
+    "### 1. 順時針旋轉 90° (Clockwise)\n",
+    "* **公式**：$(c, n - 1 - r)$\n",
+    "* **計算**：$(1, 5 - 1 - 0) \\to \\mathbf{(1, 4)}$\n",
+    "* **邏輯**：\n",
+    "    * 原本在「頂端」的 Row 0，變成了「最右邊」的 Col 4。\n",
+    "    * 原本在「左邊」的 Col 1，變成了「上面」的 Row 1。\n",
+    "\n",
+    "### 2. 逆時針旋轉 90° (Counter-Clockwise)\n",
+    "* **公式**：$(n - 1 - c, r)$\n",
+    "* **計算**：$(5 - 1 - 1, 0) \\to \\mathbf{(3, 0)}$\n",
+    "* **邏輯**：\n",
+    "    * 原本在「頂端」的 Row 0，變成了「左邊」的 Col 0。\n",
+    "    * 原本在「左邊」的 Col 1，變成了「下面」的 Row 3。\n",
+    "\n",
+    "### 3. 旋轉 180°\n",
+    "* **公式**：$(n - 1 - r, n - 1 - c)$\n",
+    "* **計算**：$(5 - 1 - 0, 5 - 1 - 1) \\to \\mathbf{(4, 3)}$\n",
+    "* **邏輯**：\n",
+    "    * Row 和 Col 各自跑到對面，相當於繞著中心點做對稱。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 💡 記憶小撇步 (Interview Tips)\n",
+    "\n",
+    "1.  **90 度必換位**：只要是旋轉 90 度，$r$ 和 $c$ 的位置一定會互換。\n",
+    "2.  **誰減法誰反轉**：\n",
+    "    * **順時針**：右邊的座標（新的 Col）加減法 $\\to (c, \\mathbf{n-1-r})$\n",
+    "    * **逆時針**：左邊的座標（新的 Row）加減法 $\\to (\\mathbf{n-1-c}, r)$\n",
+    "3.  **原地交換 (In-place) 的四角規律**：\n",
+    "    在程式實作時，這四個座標點會形成一個循環。以順時針為例：\n",
+    "    $(r, c) \\to (c, n-1-r) \\to (n-1-r, n-1-c) \\to (n-1-c, r) \\to \\text{Back to } (r, c)$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "bed9710a",
@@ -226,7 +286,13 @@
     }
    ],
    "source": [
-    "matrix = [[1,2,3,4,5],[6,7,8,9,10],[11,12,13,14,15],[16,17,18,19,20],[21,22,23,24,25]]\n",
+    "matrix = [\n",
+    "    [1,2,3,4,5],\n",
+    "    [6,7,8,9,10],\n",
+    "    [11,12,13,14,15],\n",
+    "    [16,17,18,19,20],\n",
+    "    [21,22,23,24,25]\n",
+    "    ]\n",
     "\n",
     "Solution().rotate(matrix)"
    ]
